[gd_scene load_steps=25 format=3 uid="uid://df6737sinoafr"]

[ext_resource type="Script" path="res://scenes/navigation/main_menu/main_menu.gd" id="1_jtkxk"]
[ext_resource type="Texture2D" uid="uid://bje0ttmigqmic" path="res://graphics/level1/2x/2x/MainMenu_bg@2x.png" id="1_yiw32"]
[ext_resource type="Script" path="res://scenes/navigation/main_menu/Modal.gd" id="2_2fmup"]
[ext_resource type="Texture2D" uid="uid://dwpuyl43hd5nu" path="res://graphics/ui/icons/energly_lbl@2x.png" id="2_rdlts"]
[ext_resource type="PackedScene" uid="uid://d0prpdk8wyrbs" path="res://scenes/navigation/settings/error_modal.tscn" id="3_atvqk"]
[ext_resource type="Texture2D" uid="uid://d0pnifevgmxyg" path="res://graphics/ui/icons/add_icon@2x.png" id="3_br7nd"]
[ext_resource type="Texture2D" uid="uid://o8emhxhdid6u" path="res://graphics/ui/icons/daily_task_icon@2x.png" id="3_cnwvt"]
[ext_resource type="Texture2D" uid="uid://crs6qkp4igooo" path="res://graphics/ui/icons/coins_lbl@2x.png" id="4_oygv8"]
[ext_resource type="Texture2D" uid="uid://2o2at716jkrn" path="res://graphics/ui/icons/settings_icon@2x.png" id="4_qj5eq"]
[ext_resource type="Texture2D" uid="uid://bi1u4u3asgvfd" path="res://graphics/ui/icons/store_icon@2x.png" id="5_nlw81"]
[ext_resource type="Texture2D" uid="uid://dcr3wafmwe7ej" path="res://graphics/ui/buttons/2x/dailytaskPressed_btn@2x.png" id="9_rloq8"]
[ext_resource type="Texture2D" uid="uid://bubnyojlbrn6i" path="res://graphics/ui/icons/Inventory_btn@2x.png" id="10_42o32"]
[ext_resource type="Texture2D" uid="uid://bkr71kauu0j4q" path="res://graphics/ui/icons/duwa_icon@2x.png" id="10_l8wx2"]
[ext_resource type="Texture2D" uid="uid://boqjwp8unve87" path="res://graphics/ui/buttons/2x/shopPressed_btn_1@2x.png" id="10_pps7j"]
[ext_resource type="Texture2D" uid="uid://0nbah27jhrrg" path="res://graphics/ui/buttons/2x/InventoryPressed_btn@2x.png" id="13_0ke5v"]
[ext_resource type="Texture2D" uid="uid://bvdytd0mbaq62" path="res://graphics/ui/buttons/2x/settingsPressed_btn@2x.png" id="13_6hqce"]
[ext_resource type="Texture2D" uid="uid://gkrq2kpwaxy8" path="res://graphics/ui/icons/bisdakids_game_title@2x.png" id="13_6r1g0"]
[ext_resource type="Texture2D" uid="uid://7f0l04hapnd0" path="res://graphics/boss_stage/Assets/2x/DuwaPressed_btn@2x.png" id="13_17ihm"]
[ext_resource type="Texture2D" uid="uid://iksmgo1nrnw2" path="res://graphics/ui/icons/undang_icon@2x.png" id="13_t0ps6"]
[ext_resource type="Texture2D" uid="uid://s374vg6c40w1" path="res://graphics/ui/buttons/2x/credits_btn@2x.png" id="14_232pt"]
[ext_resource type="Texture2D" uid="uid://bk56otx7qy055" path="res://graphics/ui/buttons/2x/CreditsPressed_btn@2x.png" id="15_7nw5j"]
[ext_resource type="Texture2D" uid="uid://p2cbfj4lgtho" path="res://graphics/ui/buttons/2x/QuitPressed_btn@2x.png" id="16_vrwmt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_owj6l"]
texture = ExtResource("2_rdlts")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hi20y"]
texture = ExtResource("4_oygv8")

[node name="MainMenu" type="Node"]
script = ExtResource("1_jtkxk")

[node name="Modal" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2fmup")

[node name="ErrorModal" parent="Modal" instance=ExtResource("3_atvqk")]
visible = false

[node name="Background" type="TextureRect" parent="."]
offset_left = -57.0
offset_top = -104.0
offset_right = 1350.0
offset_bottom = 752.0
texture = ExtResource("1_yiw32")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 31.0
offset_right = 537.0
offset_bottom = 111.0
theme_override_constants/separation = 70

[node name="energy_lbl" type="Label" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(178, 78)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_owj6l")

[node name="energyAdd_btn" type="TextureButton" parent="Control/HBoxContainer/energy_lbl"]
layout_mode = 0
offset_left = 183.0
offset_top = 23.0
offset_right = 224.0
offset_bottom = 64.0
texture_normal = ExtResource("3_br7nd")

[node name="Coin_lbl" type="Label" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(178, 78)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_hi20y")

[node name="coinAdd_btn" type="TextureButton" parent="Control/HBoxContainer/Coin_lbl"]
layout_mode = 0
offset_left = 183.0
offset_top = 23.0
offset_right = 224.0
offset_bottom = 64.0
texture_normal = ExtResource("3_br7nd")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 827.0
offset_top = 32.0
offset_right = 1280.0
offset_bottom = 120.0
theme_override_constants/separation = 35

[node name="DailyTask" type="TextureButton" parent="Control/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_cnwvt")
texture_pressed = ExtResource("9_rloq8")
stretch_mode = 3

[node name="Shop" type="TextureButton" parent="Control/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("5_nlw81")
texture_pressed = ExtResource("10_pps7j")
stretch_mode = 3

[node name="Inventory" type="TextureButton" parent="Control/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("10_42o32")
texture_pressed = ExtResource("13_0ke5v")
stretch_mode = 3

[node name="Settings" type="TextureButton" parent="Control/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("4_qj5eq")
texture_pressed = ExtResource("13_6hqce")
stretch_mode = 3

[node name="Play" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.363775
anchor_top = 0.659459
anchor_right = 0.619483
anchor_bottom = 0.833784
offset_left = -3.05176e-05
texture_normal = ExtResource("10_l8wx2")
texture_pressed = ExtResource("13_17ihm")
stretch_mode = 3

metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 525.0
offset_right = 1280.0
offset_bottom = 645.0
mouse_filter = 2
theme_override_constants/separation = 835

[node name="Credits" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("14_232pt")
texture_pressed = ExtResource("15_7nw5j")
stretch_mode = 3

[node name="Quit" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("13_t0ps6")
texture_pressed = ExtResource("16_vrwmt")
stretch_mode = 3

[node name="BisdakidsLogo" type="Sprite2D" parent="."]
position = Vector2(672, 388)
texture = ExtResource("13_6r1g0")

[connection signal="child_exiting_tree" from="Modal" to="." method="_on_modal_child_exiting_tree"]
[connection signal="pressed" from="Control/Play" to="." method="_on_play_pressed"]
